--- a/enginautom1.css
+++ b/enginautom1.css
@@ -104,12 +104,13 @@
     /**************************************************************************/
     .enginautom1-more-info-container {
     	text-align: right;
+		font-size: 0.7em;
     }
 
     /**************************************************************************/
     .enginautom1-divider {
     	width: 1px;
-    	background-color: #999;
+    	background-color: transparent;
     }
 
     /**************************************************************************/
