--- a/enginint2.css
+++ b/enginint2.css
@@ -96,12 +96,13 @@
     /**************************************************************************/
     .enginint2-more-info-container {
     	text-align: right;
+		font-size: 0.7em;
     }
 
     /**************************************************************************/
     .enginint2-divider {
     	width: 1px;
-    	background-color: #00C;
+    	background-color: transparent;
     }
 
     /**************************************************************************/
