--- a/ref2.css
+++ b/ref2.css
@@ -79,7 +79,7 @@
 /**********************************************/
 .ref2-divider {
 	width: 1px;
-	background-color: #00C;
+	background-color: transparent;
 }
 
 .ref2-right {
