--- a/ref4.css
+++ b/ref4.css
@@ -78,7 +78,7 @@
 /**********************************************/
 .ref4-divider {
 	width: 1px;
-	background-color: #00C;
+	background-color: transparent;
 }
 
 .ref4-right {
