--- a/enginelekt1.css
+++ b/enginelekt1.css
@@ -103,12 +103,13 @@
     /**************************************************************************/
     .enginelekt1-more-info-container {
     	text-align: right;
+		font-size: 0.7em;
     }
 
     /**************************************************************************/
     .enginelekt1-divider {
     	width: 1px;
-    	background-color: #999;
+    	background-color: transparent;
     }
 
     /**************************************************************************/
