--- a/enginext1.css
+++ b/enginext1.css
@@ -99,12 +99,13 @@
     /**************************************************************************/
     .enginext1-more-info-container {
     	text-align: right;
+		font-size: 0.7em;
     }
 
     /**************************************************************************/
     .enginext1-divider {
     	width: 1px;
-    	background-color: #999;
+    	background-color: transparent;
     }
 
     /**************************************************************************/
