--- a/enginint3.css
+++ b/enginint3.css
@@ -99,12 +99,13 @@
     /**************************************************************************/
     .enginint3-more-info-container {
     	text-align: right;
+		font-size: 0.7em;
     }
 
     /**************************************************************************/
     .enginint3-divider {
     	width: 1px;
-    	background-color: #00C;
+    	background-color: transparent;
     }
 
     /**************************************************************************/
