--- a/manage.css
+++ b/manage.css
@@ -5,17 +5,6 @@
     	padding: 4vw 6vw;
     	width: 100%;
     	box-sizing: border-box;
-    	/* background: linear-gradient(
-        to bottom,
-        #10AEEA 0%,
-        #040411 100%
-      ), 
-      linear-gradient(
-        to right,
-        rgba(0,0,0,0) 0%,
-        rgba(0,0,0,0.3) 100%
-      );
-      background-blend-mode: multiply; */
     	background:
     		linear-gradient(to right,
     			rgba(0, 0, 0, 0) 0%,
@@ -28,20 +17,20 @@
     	height: 1px;
     	background-color: #999;
     	width: 100%;
-    	margin-bottom: 3vw;
+    	margin-bottom: clamp(1rem, 3vw, 3rem);
     }
 
     .manage-grid-body h3 {
-    	font-size: 2.2vw;
+    	font-size: clamp(1.4rem, 2.2vw, 3.5rem);
     	font-weight: 300;
-    	margin-bottom: 3vw;
+    	margin-bottom: clamp(1rem, 3vw, 3rem);
     	text-align: left;
     }
 
     .manage-grid-body h1 {
-    	font-size: 4.5vw;
+    	font-size: clamp(2rem, 4.5vw, 6rem);
     	font-weight: 300;
-    	margin-bottom: 5vw;
+    	margin-bottom: clamp(1rem, 5vw, 5rem);
     	text-align: left;
     }
 
@@ -58,7 +47,7 @@
     }
 
     .manage-text p {
-    	font-size: 1.6vw;
+    	font-size: clamp(1.1rem, 1.6vw, 2.5rem);
     	line-height: 1.8;
     	margin: 0 0 1.5vw 0;
     }
@@ -73,7 +62,7 @@
     	position: relative;
     	padding-left: 2vw;
     	margin-bottom: 1vw;
-    	font-size: 1.5vw;
+    	font-size: clamp(1rem, 1.5vw, 2.4rem);
     	line-height: 1.8;
     }
 
@@ -83,7 +72,7 @@
     	left: 0;
     	top: 0;
     	color: white;
-    	font-size: 1.5vw;
+    	font-size: clamp(1rem, 1.5vw, 2.4rem);
     	line-height: 1.8;
     }
 
@@ -107,7 +96,7 @@
     .manage-link a {
     	color: #ACF;
     	text-decoration: none;
-    	font-size: 1.6vw;
+    	font-size: clamp(0.8rem, 1.1vw, 2rem);
     }
 
     @media (max-width: 600px) {
@@ -128,11 +117,11 @@
     		font-size: 4vw;
     	}
 
-    	.manage-link {
+    	/* .manage-link {
     		text-align: left;
-    	}
+    	} */
 
     	.manage-link a {
-    		font-size: 4vw;
+    		font-size: 3vw;
     	}
     }
