--- a/onas2.css
+++ b/onas2.css
@@ -25,7 +25,6 @@
 
     .onas2-left,
     .onas2-right {
-    	padding-inline: 1vw;
     	flex: 0 0 49%;
     	box-sizing: border-box;
     }
@@ -34,6 +33,7 @@
     	display: flex;
     	flex-direction: column;
     	justify-content: center;
+    	padding: 1vw;
     }
 
     .onas2-left p {
@@ -57,6 +57,10 @@
     	margin: 0;
     }
 
+	.onas2-right {
+		padding: 4vw;
+	}
+
     /* Pečiatka s fixnými rozmermi a pridaným marginom vpravo */
     .onas2-official-stamp {
     	display: block;
@@ -69,10 +73,10 @@
     }
 
     .onas2-official-stamp:hover {
-    	transform: scale(1.1);
+    	transform: scale(1.25);
     }
 
-	.onas2-left p.onas2-official-stamp-info {
+	/* .onas2-left p.onas2-official-stamp-info {
 		font-size: calc(0.5rem + 0.4vw);
 		text-align: right;
 		margin-top: 0;
@@ -80,11 +84,11 @@
 	}
 
 	.onas2-left p.onas2-official-stamp-info::after {
-		content: " ↑";   /* medzera + šípka */
+		content: " ↑";
   		font-size: calc(0.6rem + 2vw);
   		color: inherit;
 	}
-
+ */
 
     /*************************************************************************************/
     .onas2-certif-modal-overlay {
