--- a/ref.css
+++ b/ref.css
@@ -1,40 +1,36 @@
     body {
-      margin: 0;
-      font-family: 'Poppins', 'Open Sans', Arial, Tahoma, sans-serif;
+    	margin: 0;
+    	font-family: 'Poppins', 'Open Sans', Arial, Tahoma, sans-serif;
     }
 
     .ref-body {
-      padding: 2rem;
-	  /* padding-bottom: 0; */
-      background-color: #E8F4FF;
+    	padding: 0.5rem 2rem 1rem 2rem;
+    	/* padding-bottom: 0; */
+    	background-color: #E8F4FF;
+    	/* border: 1px dashed red; */
     }
 
     .ref-popis {
-      text-align: left;
-      /* color: #777; */
-      color: black;
+    	text-align: left;
+    	color: black;
     }
 
     h1.ref-popis {
-      font-size: 2rem;
-      margin-bottom: 1.5rem;
+    	/* font-size: 2rem; */
+    	margin-bottom: 1.5rem;
+    	line-height: 1.1;
     }
 
     p.ref-popis {
-      font-size: 1rem;
-      margin-bottom: 1rem;
-      line-height: 1.4;
+    	font-size: medium;
+    	margin-bottom: 1rem;
+    	line-height: 1.4;
     }
 
     p.ref-popis:last-of-type {
-      margin-bottom: 0; /* alebo 4rem, podľa potreby */
+    	margin-bottom: 0;
     }
 
-    /* h1 {
-      text-align: left;
-      margin-bottom: 2rem;
-    }
- */
     /**********************************************************************/
     .ref-grid1 {
     	display: grid;
@@ -50,7 +46,6 @@
     	align-items: stretch;
     }
 
-    /* obrázky ostanú štvorce */
     .ref-p1,
     .ref-p2 {
     	position: relative;
@@ -77,51 +72,52 @@
     	display: flex;
     	flex-direction: column;
     	align-items: flex-start;
-    	padding: clamp(0.2rem, 0.4vw, 0.4rem) clamp(0.5rem, 1vw, 1rem);
+    	padding: 1.2em;
+    	/* padding: clamp(0.4rem, 0.8vw, 0.8rem) clamp(0.6rem, 1.2vw, 1.2rem); */
     	color: white;
-    	font-size: clamp(0.8rem, 1.1vw, 1.4rem);
+    	/* font-size: clamp(0.8rem, 1.1vw, 1.4rem); */
     	/* font-size: clamp(0.7rem, 1vw, 1.3rem); */
+    	font-size: clamp(0.6rem, 0.9vw, 1.2rem);
     }
 
     .ref-t1 {
-    	background-color: blue;
+    	background-color: #1848A0;
     }
 
     .ref-t2 {
-    	background-color: darkblue;
+    	background-color: #C21;
     }
 
     .ref-text {
     	width: 100%;
+    	line-height: 1.6;
     }
 
     .ref-text h2 {
     	margin: 0;
     	margin-bottom: 0.2rem;
-		font-size: 1.35em;
-    }
-
-    .ref-text p {
-    	margin: 0;
+    	font-size: 1.30em;
     }
 
     .ref-button {
     	background-color: white;
     	color: black;
-    	border: 2px solid transparent;
-    	padding: 0 0.4rem;
+    	border: 1px solid transparent;
+    	border-radius: 2px;
+    	padding: 0 0.2rem;
     	cursor: pointer;
-    	font-weight: bold;
-    	transition: all 0.3s ease;
-		margin-left: 1rem;
-		float: right;
+    	font-weight: 700;
+    	font-size: 0.9em;
+    	/* transition: all 0.3s ease; */
+    	margin-left: 1rem;
+    	float: right;
     }
 
     .ref-button:hover {
     	background-color: black;
     	color: white;
     	border-color: white;
-    	transform: scale(1.05);
+    	/* transform: scale(1.05); */
     }
 
     /* Trojuholníky ********************************************/
@@ -131,7 +127,7 @@
     	right: 0;
     	width: 0;
     	height: 0;
-    	border-bottom: 3em solid blue;
+    	border-bottom: 3em solid #1848A0;
     	border-left: 3em solid transparent;
     }
 
@@ -141,8 +137,8 @@
     	left: 0;
     	width: 0;
     	height: 0;
-    	border-top: 3em solid darkblue;
-		border-right: 3em solid transparent;
+    	border-top: 3em solid #C21;
+    	border-right: 3em solid transparent;
     }
 
     /* Responzívne *********************************************/
@@ -153,12 +149,13 @@
 
     	.ref-t1,
     	.ref-t2 {
-    		font-size: clamp(0.6rem, 1.8vw, 1.2rem);
+    		font-size: clamp(0.6rem, 1.6vw, 1.2rem);
     	}
+
     	.ref-p1,
     	.ref-p2 {
-			aspect-ratio: 2/1;    	
-		}
+    		aspect-ratio: 2/1;
+    	}
     }
 
     @media (max-width: 600px) {
@@ -168,7 +165,7 @@
 
     	.ref-t1,
     	.ref-t2 {
-    		font-size: clamp(0.6rem, 3.6vw, 1.2rem);
+    		font-size: clamp(0.6rem, 2.8vw, 1.2rem);
     	}
 
     	.ref-p1 {
@@ -196,7 +193,7 @@
     		height: 0;
     		border-top: none;
     		border-right: none;
-    		border-bottom: 3em solid darkblue;
+    		border-bottom: 3em solid #C21;
     		border-left: 3em solid transparent;
     	}
     }
