--- a/ref3.css
+++ b/ref3.css
@@ -54,9 +54,9 @@
 
 .ref3-left-group {
 	position: relative;
-	aspect-ratio: 5 / 5;
+	/* aspect-ratio: 5 / 5; */
 	width: 100%;
-	/* max-width: 600px; */
+	max-width: 600px;
 	justify-self: center;
 	align-self: center;
 }
@@ -68,7 +68,7 @@
 	left: 0%;
 }
 
-.ref3-img2 {
+/* .ref3-img2 {
 	position: absolute;
 	width: 100%;
 	top: 68%;
@@ -80,11 +80,11 @@
 	top: 60%;
 	left: 50%;
 }
-
+ */
 /**********************************************/
 .ref3-divider {
 	width: 1px;
-	background-color: #00C;
+	background-color: transparent;
 }
 
 .ref3-right {
