--- a/ref.css
+++ b/ref.css
@@ -1,8 +1,27 @@
-    body {
+    /* body {
     	margin: 0;
     	font-family: 'Poppins', 'Open Sans', Arial, Tahoma, sans-serif;
     }
+ */
+    /**********************************************************************/
+    .ref-onas3-wrapper {
+    	padding: 1vw 2vw 0 2vw;
+    	background-color: #E8F4FF;
+    }
 
+    .ref-onas3-header-line {
+    	width: 100%;
+    	height: 1px;
+    	background-color: #00C;
+    }
+
+    .ref-onas3-nadpis h2 {
+    	text-align: left;
+		font-size: clamp(1.5rem, 2.4vw ,3rem);
+    	margin-bottom: 0;
+    }
+
+    /**********************************************************************/
     .ref-body {
     	padding: 0.5rem 2rem 1rem 2rem;
     	/* padding-bottom: 0; */
@@ -10,7 +29,7 @@
     	/* border: 1px dashed red; */
     }
 
-    .ref-popis {
+   .ref-popis {
     	text-align: left;
     	color: black;
     }
