--- a/enginint1.css
+++ b/enginint1.css
@@ -3,7 +3,7 @@
     	color: black;
     	/* font-weight: 400; */
     	font-size: clamp(16px, 1.6vw, 30px);
-		font-weight: 200;
+		/* font-weight: 200; */
     	display: flex;
     	flex-direction: column;
     	padding: 1vw 2vw;
@@ -14,12 +14,8 @@
     	margin-bottom: 0.3em;
     }
 
-    p.enginint1-big {
+    p .enginint1-big {
     	font-size: 105%;
-    }
-
-    strong.enginint1-big {
-    	font-size: 110%;
     }
 
     .enginint1-body p {
@@ -42,6 +38,7 @@
     	flex: 1;
     	display: flex;
     	padding-top: 1vw;
+		/* border: 1px dashed red; */
     }
 
     /******************************************************************/
@@ -53,6 +50,7 @@
     	align-items: center;
     	padding: 1vw;
     	box-sizing: border-box;
+		/* border: 1px dashed red; */
     }
 
     .enginint1-img-wrapper {
@@ -84,10 +82,11 @@
     	padding: 1vw;
     	padding-top: 0;
     	box-sizing: border-box;
+		/* border: 1px dashed red; */
     }
 
     .enginint1-right strong {
-    	font-weight: 500;
+    	font-weight: 700;
     }
 
     .enginint1-right h3 {
