--- a/enginint2.css
+++ b/enginint2.css
@@ -4,7 +4,7 @@
     	height: auto;
     	min-height: 100%;
     	font-size: clamp(16px, 1.6vw, 30px);
-		font-weight: 200;
+		/* font-weight: 200; */
     	padding: 1vw 2vw;
     	/* vertikalne horizontalne*/
     	box-sizing: border-box;
@@ -16,6 +16,7 @@
     	background-color: #00C;
     }
 
+    /**************************************************************************/
     .enginint2-content {
     	display: flex;
     	flex-direction: row;
@@ -55,7 +56,7 @@
     }
 
     .enginint2-left strong {
-    	font-weight: 500;
+    	font-weight: 600;
     }
 
     .enginint2-left-last {
