--- a/footer.css
+++ b/footer.css
@@ -39,7 +39,7 @@
 
     .footer-grid {
     	display: grid;
-    	grid-template-columns: 1fr 2fr 2fr 2fr; /* repeat(4, 1fr); */
+    	grid-template-columns: 1fr 4fr 4fr 4fr 1fr; /* repeat(4, 1fr); */
     	gap: 1vw;
     	max-width: 1200px;
     	margin: 0; /* auto; */
@@ -73,14 +73,18 @@
     	line-height: 1.3;
     }
 
-    .footer-column a {
-    	color: #333;
-    	text-decoration: none;
-    }
+	.footer-column a {
+		color: #338;
+		text-decoration: none;
+		display: inline-block;
+		transition: color 0.2s ease;
+		text-underline-offset: 2px;
+	}
 
-    .footer-column a:hover {
-    	text-decoration: underline;
-    }
+	.footer-column a:hover {
+		color: #00F;
+		text-decoration: underline;
+	}
 
 	/****************************************************************************/
     .footer-logo img {
@@ -98,12 +102,12 @@
 	/****************************************************************************/
     .footer-email-link {
     	color: #000;
-    	font-weight: bold;
+    	font-weight: 500;
     	text-decoration: none;
     }
 
     .footer-email-link a {
-    	color: #000;
+    	color: #338;
     	text-decoration: none;
     }
 
