--- a/fonts-poppins.css
+++ b/fonts-poppins.css
@@ -1,7 +1,7 @@
 /* Poppins Thin – 100 */
 @font-face {
   font-family: 'Poppins';
-  src: url('fonts/poppins-v23-latin-ext-100.woff2') format('woff2');
+  src: url('enifonts/poppins-v23-latin-ext-100.woff2') format('woff2');
   font-weight: 100;
   font-style: normal;
   font-display: swap;
@@ -10,8 +10,8 @@
 /* Poppins ExtraLight – 200 */
 @font-face {
   font-family: 'Poppins';
-  src: url('fonts/poppins-v23-latin-ext-200.woff2') format('woff2'),
-       url('fonts/Poppins-ExtraLight.woff') format('woff');
+  src: url('enifonts/poppins-v23-latin-ext-200.woff2') format('woff2'),
+       url('enifonts/Poppins-ExtraLight.woff') format('woff');
   font-weight: 200;
   font-style: normal;
   font-display: swap;
@@ -20,8 +20,8 @@
 /* Poppins Light – 300 */
 @font-face {
   font-family: 'Poppins';
-  src: url('fonts/poppins-v23-latin-ext-300.woff2') format('woff2'),
-       url('fonts/Poppins-Light.woff') format('woff');
+  src: url('enifonts/poppins-v23-latin-ext-300.woff2') format('woff2'),
+       url('enifonts/Poppins-Light.woff') format('woff');
   font-weight: 300;
   font-style: normal;
   font-display: swap;
@@ -30,8 +30,8 @@
 /* Poppins Regular – 400 */
 @font-face {
   font-family: 'Poppins';
-  src: url('fonts/poppins-v23-latin-ext-regular.woff2') format('woff2'),
-       url('fonts/Poppins-Regular.woff') format('woff');
+  src: url('enifonts/poppins-v23-latin-ext-regular.woff2') format('woff2'),
+       url('enifonts/Poppins-Regular.woff') format('woff');
   font-weight: 400;
   font-style: normal;
   font-display: swap;
@@ -40,8 +40,8 @@
 /* Poppins Medium – 500 */
 @font-face {
   font-family: 'Poppins';
-  src: url('fonts/poppins-v23-latin-ext-500.woff2') format('woff2'),
-       url('fonts/Poppins-Medium.woff') format('woff');
+  src: url('enifonts/poppins-v23-latin-ext-500.woff2') format('woff2'),
+       url('enifonts/Poppins-Medium.woff') format('woff');
   font-weight: 500;
   font-style: normal;
   font-display: swap;
@@ -50,8 +50,8 @@
 /* Poppins SemiBold – 600 */
 @font-face {
   font-family: 'Poppins';
-  src: url('fonts/poppins-v23-latin-ext-600.woff2') format('woff2'),
-       url('fonts/Poppins-SemiBold.woff') format('woff');
+  src: url('enifonts/poppins-v23-latin-ext-600.woff2') format('woff2'),
+       url('enifonts/Poppins-SemiBold.woff') format('woff');
   font-weight: 600;
   font-style: normal;
   font-display: swap;
@@ -60,8 +60,8 @@
 /* Poppins Bold – 700 */
 @font-face {
   font-family: 'Poppins';
-  src: url('fonts/poppins-v23-latin-ext-700.woff2') format('woff2'),
-       url('fonts/Poppins-Bold.woff') format('woff');
+  src: url('enifonts/poppins-v23-latin-ext-700.woff2') format('woff2'),
+       url('enifonts/Poppins-Bold.woff') format('woff');
   font-weight: 700;
   font-style: normal;
   font-display: swap;
