--- a/enicss/itn.css
+++ b/enicss/itn.css
@@ -229,8 +229,9 @@
 
     .itn-custom-list li {
     	margin: 0;
+		margin-bottom: 0.3em;
     	padding: 0;
-    	line-height: 1.4;
+    	line-height: 1.3;
     	position: relative;
     }
 
@@ -451,6 +452,17 @@
 
     /**************************************************************************/
     /**************************************************************************/
+	@media (max-width: 1000px) {
+		.itn-content-flex.fullstack-flex {
+    		flex-direction: column;
+    		height: auto;
+		}
+		.itn-content-flex.fullstack-flex .itn-img-wrapper {
+			width: 50%;
+			height: auto;
+		}
+	}
+
     @media (max-width: 762px) {
     	.itn-content-flex {
     		flex-direction: column;
