--- a/enicss/itn.css
+++ b/enicss/itn.css
@@ -282,7 +282,7 @@
     	max-width: 100%;
     	max-height: 100%;
     	object-fit: contain;
-		border-radius: 0.6vw;
+		/* border-radius: 0.6vw; */
     }
 
  	/**************************************************************************/
