--- a/enicss/engin.css
+++ b/enicss/engin.css
@@ -1,3 +1,19 @@
+    .color-variant-engin1 {
+		--bg: #F8FCFF;
+		--text: black;
+		--line: #00C;
+		--background: var(--bg);
+ 		--blend: normal;
+	}
+
+    .color-variant-engin2 {
+		--bg: #d7ebfc;
+		--text: black;
+		--line: #00C;
+		--background: var(--bg);
+ 		--blend: normal;
+	}
+
     .color-variant-enginint1 {
 		--bg: #F8FCFF;
 		--text: black;
@@ -6,7 +22,7 @@
  		--blend: normal;
 	}
 
-    .color-variant-enginint2 {
+	.color-variant-enginint2 {
 		--bg: #ECF6FF;
 		--text: black;
 		--line: #00C;
@@ -212,14 +228,27 @@
     	width: 100%;
     	height: 100%;
     	overflow: hidden;
+    	box-sizing: border-box;
 	}
 
     .engin-img-wrapper img {
     	max-width: 100%;
     	max-height: 100%;
     	object-fit: contain;
+    	box-sizing: border-box;
     	/* clip-path: inset(0.5% 0 0.5% 0); */
     }
+
+	.engin-img-wrapper .img-bg {
+		background-color: #d7ebfc; /* nová farba pozadia */
+		display: inline-block;
+	}
+
+	.engin-img-wrapper .img-bg img {
+		display: block;
+		mix-blend-mode: multiply; /* mieša farby tak, že biela sa stratí */
+		opacity: 0.9; /* voliteľne – jemnejšie */
+	}
 
     /**************************************************************************/
     .engin-icon-row {
