--- a/enicss/itn.css
+++ b/enicss/itn.css
@@ -85,11 +85,17 @@
 
 	.itn-header-text {
 		padding: 2vw 2vw 0.5vw 2vw;
+		/* border: 1px dashed red; */
 	}
 
 	.itn-header-text h1 {
 		font-weight: 600;
 		font-size: 2.1em;
+		margin: 0;
+	}
+
+	.itn-header-text h2 {
+		font-weight: bold;
 		margin: 0;
 	}
 
@@ -149,32 +155,6 @@
 		padding-top: 20vw;
 	}
 
-    .itn-line-with-img {
-    	display: flex;
-    	justify-content: space-between;
-    	align-items: flex-end;
-		padding-bottom: 1vw; 
-    	box-sizing: border-box;
-	}
-
-    .itn-line-with-img h2 {
-		font-weight: 600;
-    	margin: 0;
-    }
-
-    .itn-line-with-img h3 {
-    	margin: 0;
-    }
-
-    .itn-line-with-img img {
-    	height: 5vw;
-    	width: auto;
-    }
-
-    .itn-line-with-img .img-invert {
-    	filter: invert(1) brightness(0.8);
-	}
-
     .itn-text-wrapper strong {
     	font-weight: bold;
     }
@@ -184,6 +164,7 @@
 	}
 
 	.itn-text-wrapper h3 {
+		margin-top: 0;
 		margin-bottom: 0;
 	}
 
